@@ -49,6 +49,8 @@ RELEASE 2.3.1.alpha.yyyymmdd - NEW DATE WILL BE INSERTED HERE
     - Added release_target_info() to File nodes, which helps to
       reduce memory consumption in clean builds and update runs
       of large projects.
+    - Fixed the handling of long options in the command-line
+      parsing (#2929).
 
   From Gary Oberbrunner:
     - Test harness: fail_test() can now print a message to help debugging.
